--- a/index.html
+++ b/index.html
@@ -1,55 +1,62 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Portfolio</title>
+    <link rel="stylesheet" href="./styles/style.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Portfolio</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
-</head>
+  <body>
+    <header class="cabecalho">
+      <nav class="cabecalho__menu">
+        <a class="cabecalho__menu__link" href="index.html">Home</a>
+        <a class="cabecalho__menu__link" href="about.html">Sobre Mim</a>
+      </nav>
+    </header>
+    <main class="apresentacao">
+      <section class="apresentacao__conteudo">
+        <h1 class="apresentacao__conteudo__titulo">
+          Eleve seu negócio digital a outro nível
+          <strong class="titulo-destaque"> com um Sofware de qualidade!</strong>
+        </h1>
+        <p class="apresentacao__conteudo__texto">
+          Olá! Sou <strong> Tiago Ceridorio </strong> desenvolvedor FullStack e
+          DevOps com especialidade em
+          <strong>
+            Java, NodeJs, Python, MongoDb, MySQL, PostgreSQL, Firestore, React,
+            NextJS</strong
+          >
+          e nas Clouds <strong> AWS e GCP</strong>. <br />Ajudo negócios e
+          designers a colocarem em prática boas ideias. Vamos Conversar?
+        </p>
 
-<body>
-  <header class="cabecalho">
-    <nav class="cabecalho__menu">
-      <a class="cabecalho__menu__link">Home</a>
-      <a class="cabecalho__menu__link">Sobre Mim</a>
-    </nav>
-  </header>
-  <main class="apresentacao">
-    <section class="apresentacao__conteudo">
-      <h1 class="apresentacao__conteudo__titulo">
-        Eleve seu negócio digital a outro nível
-        <strong class="titulo-destaque"> com um Sofware de qualidade!</strong>
-      </h1>
-      <p class="apresentacao__conteudo__texto">
-        Olá! Sou <strong> Tiago Ceridorio </strong> desenvolvedor FullStack com especialidade em:
-      </p>
-      <ul class="apresentacao__conteudo__texto_lista">
-        <li>Consultoria em tecnologia</li>
-        <li>Desenvolvimento de sistemas</li>
-        <li>Desenvolvimento de aplicativos</li>
-        <li>Desenvolvimento de sites</li>
-      </ul>
-      <p class="apresentacao__conteudo__texto">
-        Ajudo negócios e designers a colocarem em
-        prática boas ideias. Vamos Conversar?
-      </p>
-
-      <div class="apresentacao__links">
-        <h2 class="apresentacao__links__subtitulo">Acesse minhas redes:</h2>
-        <a class="apresentacao__links__link" href="https://www.linkedin.com/in/tiago-ferreira-ceridorio/">
-          <img src="./assets/linkedin.png" alt="Logo do Linkedin"> Linkedin</a>
-        <a class="apresentacao__links__link" href="https://github.com/tiagoceridorio/"> <img src="./assets/github.png"
-            alt="Logo do Github"> Github</a>
-      </div>
-    </section>
-    <img class="imagen-desenvolvedor" src="./assets/imagem.jpeg" alt="Imagem do desenvolvedor" />
-  </main>
-  <footer>
-    <p class="rodape">Desenvolvido por Tiago Ceridorio</p>
-  </footer>
-</body>
-
+        <div class="apresentacao__links">
+          <h2 class="apresentacao__links__subtitulo">Acesse minhas redes:</h2>
+          <a
+            class="apresentacao__links__link"
+            href="https://www.linkedin.com/in/tiago-ferreira-ceridorio/"
+          >
+            <img src="./assets/linkedin.png" alt="Logo do Linkedin" />
+            Linkedin</a
+          >
+          <a
+            class="apresentacao__links__link"
+            href="https://github.com/tiagoceridorio/"
+          >
+            <img src="./assets/github.png" alt="Logo do Github" /> Github</a
+          >
+        </div>
+      </section>
+      <img
+        class="imagen-desenvolvedor"
+        src="./assets/imagem.jpeg"
+        alt="Imagem do desenvolvedor"
+      />
+    </main>
+    <footer class="rodape">
+      <p>Desenvolvido por Tiago Ceridorio</p>
+    </footer>
+  </body>
 </html>
