--- a/about.html
+++ b/about.html
@@ -14,7 +14,40 @@
         <a class="cabecalho__menu__link" href="about.html">Sobre Mim</a>
       </nav>
     </header>
-    <main></main>
+    <main class="apresentacao__about">
+        <section class="apresentacao__conteudo">
+            <h1 class="apresentacao__conteudo__titulo">Sobre Mim</h1>
+            <p class="apresentacao__conteudo__texto">Com mais de 12 anos de experiência profissional, me dedico à estruturação e gestão de soluções inovadoras de e-commerce, ERP e Sistemas de Apoio a Decisão. Minha especialidade reside na criação de arquiteturas com e sem servidor e na utilização de bancos de dados SQL e não relacionais, sempre buscando alinhar minhas ações com a missão e cultura da organização.
+
+                No meu papel atual, lidero o desenvolvimento de uma importante solução E-commerce, aplicando meu conhecimento aprofundado em AWS, NodeJS, Java e NoSQL.</p>
+            <p class="apresentacao__conteudo__texto">Líder Técnico e Arquiteto de Soluções com ampla experiência em desenvolvimento e gestão de projetos de software. Tenho um histórico sólido na implementação de soluções de e-commerce baseadas em arquitetura sem servidor, utilizando serviços de nuvem como AWS e GCP. Atuei na análise e desenvolvimento de ERPs, integração de sistemas, customização de processos e implementação de BI. Competente em diversas tecnologias, incluindo Java, Node.js, MongoDB, PostgreSQL, e frameworks como NestJS e Vaadin. Minha experiência inclui liderar equipes técnicas, otimizar produtividade e garantir a entrega de soluções robustas e escaláveis.
+                
+        </section>
+        <section class="apresentacao__conteudo">
+            <h2 class="apresentacao__conteudo__subtitulo">
+                Principais Competências:
+                </h2>
+                <ul class="apresentacao__conteudo__texto">
+                    <li>Arquitetura de Dados e Cloud Native</li>
+                    <li>Computação em Nuvem (AWS, GCP)</li>
+                    <li>Gestão de Projetos e Equipes</li>
+                    <li>Desenvolvimento de Aplicações Web e ERP</li>
+                    <li>Modelagem de Dados e Integração de Sistemas</li>
+                    <li>Desenvolvimento em Java, Node.js e JavaScript</li>
+                </ul>
+
+                <h2 class="apresentacao__conteudo__subtitulo">
+                    Experiência Relevante:
+                </h2>
+                <ul class="apresentacao__conteudo__texto">
+                    <li>Desenvolvimento de soluções de e-commerce</li>
+                    <li>Arquitetura de sistemas de apoio à decisão</li>
+                    <li>Implementação de ERPs e integração de sistemas</li>
+                    <li>Desenvolvimento de soluções de BI e Data Warehouse</li>
+                    <li>Desenvolvimento de aplicações web e mobile</li>
+                </ul>
+        </section>
+    </main>
     <footer class="rodape">
       <p >Desenvolvido por Tiago Ceridorio</p>
     </footer>
