--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
         <div class="apresentacao__links">
           <h2 class="apresentacao__links__subtitulo">Acesse minhas redes:</h2>
           <a
-            class="apresentacao__links__link"
+            class="apresentacao__links__navegacao"
             href="https://www.linkedin.com/in/tiago-ferreira-ceridorio/"
           >
             <img src="./assets/linkedin.png" alt="Logo do Linkedin" />
             Linkedin</a
           >
           <a
-            class="apresentacao__links__link"
+            class="apresentacao__links__navegacao"
             href="https://github.com/tiagoceridorio/"
           >
             <img src="./assets/github.png" alt="Logo do Github" /> Github</a
@@ -50,7 +50,7 @@
         </div>
       </section>
       <img
-        class="imagen-desenvolvedor"
+        class="apresentacao__imagem"
         src="./assets/imagem.jpeg"
         alt="Imagem do desenvolvedor"
       />
